2024-06-12T01:20:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9475136442 # 324
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 391 781 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 392 782 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-29] / []

2024-06-11T01:20:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9458012194 # 323
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 390 780 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 391 781 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-28] / []

2024-06-10T01:21:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9441046104 # 322
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-10
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 389 779 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 390 780 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-27] / []

2024-06-09T01:25:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9432954998 # 321