@@ -1,12 +1,7 @@
 {
-  "count": 6,
+  "count": 5,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-05-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-31T00:00:00Z",
       "count": 1,
