@@ -1,3 +1,12 @@
+2024-06-13T01:19:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9492109912 # 325
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-13
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 392 782 / 398 788
+* notice: next accum: outdated-unq outdated-all / unq all: 393 783 / 398 788
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-30] / []
+
 2024-06-12T01:20:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9475136442 # 324
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
